ast/src/snapshots/transmute_ast__parser__tests__let_statement.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"let forty_two = 42;\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            "forty_two",
        ],
        identifier_refs: [],
        expressions: [
            Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Number(42),
                        span: 1:17; [16, 18],
                    },
                ),
                span: 1:17; [16, 18],
            },
        ],
        statements: [
            Statement {
                id: StmtId(0),
                kind: Let(
                    Identifier {
                        id: IdentId(0),
                        span: 1:5; [4, 13],
                    },
                    ExprId(0),
                ),
                span: 1:1; [0, 19],
            },
        ],
        roots: [
            StmtId(0),
        ],
    },
)
