ast/src/snapshots/transmute_ast__parser__tests__protected_struct_in_while_expression.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"while (Struct {}) {}\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "Struct",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(0),
                    span: 1:8; [7, 13],
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: StructInstantiation(
                    IdentRefId(0),
                    [],
                ),
                span: 1:7; [6, 17],
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Block(
                    [],
                ),
                span: 1:19; [18, 20],
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: While(
                    ExprId(0),
                    ExprId(1),
                ),
                span: 1:1; [0, 20],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Expression(
                    ExprId(2),
                ),
                span: 1:1; [0, 20],
            },
        ],
        roots: [
            StmtId(0),
        ],
    },
)
