ast/src/snapshots/transmute_ast__parser__tests__ret.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"ret 42;\")).parse()"
---
Ok(
    Ast {
        identifiers: [],
        identifier_refs: [],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Number(42),
                        span: 1:5; [4, 6],
                    },
                ),
                span: 1:5; [4, 6],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Ret(
                    Some(
                        ExprId(0),
                    ),
                    Explicit,
                ),
                span: 1:1; [0, 7],
            },
        ],
        type_defs: [],
        roots: [
            StmtId(0),
        ],
    },
)
