ast/src/snapshots/transmute_ast__parser__tests__struct_instantiation_empty.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"S { };\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "S",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(0),
                    span: 1:1; [0, 1],
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: StructInstantiation(
                    IdentRefId(0),
                    [],
                ),
                span: 1:1; [0, 5],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Expression(
                    ExprId(0),
                ),
                span: 1:1; [0, 6],
            },
        ],
        roots: [
            StmtId(0),
        ],
    },
)
