ast/src/snapshots/transmute_ast__parser__tests__struct_instantiation_one_field.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "S",
            IdentId(2) => "x",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(2),
                    span: 1:5; [4, 5],
                },
            },
            IdentRefId(1) => IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(1),
                    span: 1:1; [0, 1],
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Number(1),
                        span: 1:8; [7, 8],
                    },
                ),
                span: 1:8; [7, 8],
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: StructInstantiation(
                    IdentRefId(1),
                    [
                        (
                            IdentRefId(0),
                            ExprId(0),
                        ),
                    ],
                ),
                span: 1:1; [0, 10],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                    },
                    None,
                    InputId(0),
                    [
                        StmtId(1),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Expression(
                    ExprId(1),
                ),
                span: 1:1; [0, 11],
            },
        ],
        type_defs: [],
        roots: [
            StmtId(0),
        ],
    },
)
